Fixing white gap

--- a/main.css
+++ b/main.css
@@ -31,9 +31,11 @@ figure {
     margin: 10px;
 }
 
+/*
 .slick-slide {
     margin: 5px;
 }
+*/
 
 figure>p {
     margin-top: 10px;
@@ -171,9 +173,11 @@ button:hover {
         text-align: center;
         font-size: 15px;
     }
+/*
     div {
-        margin: 10px 0px 0px 0px;
+        margin: 0px;
     }
+*/
     h1 {
         font-size: 50px;
         line-height: 60px;
